--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
-      - name: container-up
+      - name: Container is up
         run: |
           cp -av .env.config.example .env.config || echo "Arquivo não encontrado"
 
@@ -23,7 +23,7 @@ jobs:
           --env-file=$(pwd)/clients/client1-example/.env.common \
           run --rm docker-dev
 
-      - name: test-function
+      - name: Test simple function
         run: |
           cp -av .env.config.example .env.config || echo "Arquivo não encontrado"
 
