--- a/.env.config.example
+++ b/.env.config.example
@@ -86,3 +86,14 @@ ENV_OS_DEFAULT_PERMISSION_FILES=644
 # Permissão defaulr para diretórios
 # default: 755
 ENV_OS_DEFAULT_PERMISSION_DIRECTORY=755
+
+# Remove por padrão estes namespaces ao utilizar comandos, por exemplo:
+# Ao usar kubectl get svc --all--namespaces estes namespaces abaixo não serão listados.
+KUBERNETES_REMOVE_NAMESPACES=(
+  "argocd"
+  "monitoring"
+  "kube*"
+  "cert-manager"
+  "external*"
+  "istio*"
+)
