Closes #14. Parametrização do diretório de instalação de apps

--- a/clients/client1-example/.env.common
+++ b/clients/client1-example/.env.common
@@ -1,4 +1,6 @@
-PATH=/sbin:/bin:/usr/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/app:/app/aws-cli-bin
+# Onde será guardado os binários e outros arquivos que serão baixados para utilização dentro do container
+ENV_DIRECTORY_INSTALLATION=/app
+PATH=/sbin:/bin:/usr/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:${ENV_DIRECTORY_INSTALLATION}:${ENV_DIRECTORY_INSTALLATION}/aws-cli-bin
 CLI_FULL_PATH=/root/cli
 CLIENT_NAME=client1-example
 CLI_ALIAS=c
