Closes #19. Escolha de arquitetura preferencial via arquivo de configuração

--- a/.env.config.example
+++ b/.env.config.example
@@ -97,3 +97,6 @@ KUBERNETES_REMOVE_NAMESPACES=(
   "external*"
   "istio*"
 )
+
+# Arquitetura preferida ao utilizar diferentes tipos de arquiteturas, como por exemplo Apple Silicon M1/M2/etc.
+ENV_DOCKERFILE_ARCH="x86_64"
