Closes #25. Parametriza nomes de namespaces que podem variar de cluster para cluster.

--- a/.env.config.example
+++ b/.env.config.example
@@ -100,3 +100,8 @@ KUBERNETES_REMOVE_NAMESPACES=(
 
 # Arquitetura preferida ao utilizar diferentes tipos de arquiteturas, como por exemplo Apple Silicon M1/M2/etc.
 ENV_DOCKERFILE_ARCH="x86_64"
+
+# Nomes de alguns namespaces que podem variar de instalação para instalação.
+ENV_HELPER_KUBERNETES_NAMESPACE_ARGOCD="argocd"
+ENV_HELPER_KUBERNETES_NAMESPACE_K8S_DASHBOARD="kube-dashboard"
+ENV_HELPER_KUBERNETES_NAMESPACE_GRAFANA="monitoring"
