Closes #27. Adiciona timezone no PS1 caso seja selecionado

--- a/.env.config.example
+++ b/.env.config.example
@@ -105,3 +105,6 @@ ENV_DOCKERFILE_ARCH="x86_64"
 ENV_HELPER_KUBERNETES_NAMESPACE_ARGOCD="argocd"
 ENV_HELPER_KUBERNETES_NAMESPACE_K8S_DASHBOARD="kube-dashboard"
 ENV_HELPER_KUBERNETES_NAMESPACE_GRAFANA="monitoring"
+
+# Se deseja adicionar automaticamente o timezone no PS1 para ser mostrado
+ENV_DATE_TIMEZONE_PS1=false
