Closes #54. Diretório de credentials está juntamente com o cliente

--- a/clients/client1-example/client1-example.containers.yml
+++ b/clients/client1-example/client1-example.containers.yml
@@ -30,7 +30,7 @@ services:
     env_file:
       - .env.common
       - .env.dev
-      - ../../.credentials/client1-example/envs/env.dev
+      - ./credentials/envs/env.dev
 
     # Arquivos que devem ser tratados como sensíveis devem ser adicionados aqui e mencionados abaixo na seção secrets
     # deste arquivo.
