--- a/clients/client1-example/client1-example.secrets.yml
+++ b/clients/client1-example/client1-example.secrets.yml
@@ -7,9 +7,9 @@ secrets:
   # aws_credentials_dev é um arquivo que contém as credenciais de acesso à conta AWS em um ambiente de desenvolvimento.
   # As credenciais estão armazenadas no arquivo localizado na raiz do projeto no diretório .credentials
   aws_credentials_dev:
-    file: ../.././.credentials/client1-example/secrets/aws.dev
+    file: ./credentials/secrets/aws.dev
 
   # terraformrc_dev é um arquivo de configuração do Terraform para o ambiente de desenvolvimento. O arquivo está localizado
   # na raiz do projeto no diretório .credentials
   terraformrc_dev:
-    file: ../.././.credentials/client1-example/secrets/terraformrc.dev
+    file: ./credentials/secrets/terraformrc.dev
